# LLMS-Practical

./: README.md  main.py  pyproject.toml
 Stanford CME295 Transformers & LLMs/: Readme.md
Finetuning_DL.ai/: 02_Where_finetuning_fits_in_lab_student.ipynb  03_Instruction_tuning_lab_student.ipynb  04_Data_preparation_lab_student.ipynb  05_Training_lab_student.ipynb  06_Evaluation_lab_student.ipynb
PreTraining_DL.ai/: Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  Lesson_5.ipynb  Lesson_6.ipynb
Transformers_DL.ai/: L2.ipynb  L6.ipynb
makemore/: Untitled.ipynb  makemore_part1_bigrams.ipynb  makemorepart3.ipynb
micrograd/: micrograd_from_scratch.ipynb  micrograd_lecture_first_half_roughly.ipynb  micrograd_lecture_second_half_roughly.ipynb
